1.Add Learning/11. Express - Hello world 2.Rename all the "nodejs" to "node" 3.console prompt "npm install express --save"

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "url": "https://github.com/JunYe1993/React/issues"
   },
   "homepage": "https://github.com/JunYe1993/React#readme",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
